--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Bienvenue sur mon blog !</h1>
     <nav>
       <a href="index.html">Accueil</a>
-      <a href="blog/premier-article.html">Premier article</a>
+      <a href="blog/premier-article.html">Démineur Démoniaque</a>
     </nav>
   </header>
 
