--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Bienvenue sur mon blog !</h1>
+    <h1>FFlorian.fr</h1>
     <nav>
       <a href="index.html">Accueil</a>
       <a href="blog/premier-article.html">Démineur Démoniaque</a>
