--- a/docs.html
+++ b/docs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FFlorian</title>
+  <title>Documentation - FFlorian</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -21,18 +21,14 @@
 
   <section class="hero">
     <div class="container">
-      <h1>Bienvenue sur FFlorian.fr</h1>
-      <p>Blog et documentation</p>
+      <h1>Documentation</h1>
+      <p>Liste des documents disponibles.</p>
     </div>
   </section>
 
   <main class="container">
     <section class="articles-grid">
-      <article class="card">
-        <h2><a href="blog/premier-article.html">Démineur Démoniaque</a></h2>
-        <p>Découvrez mon jeu le Démineur Démoniaque.</p>
-      </article>
-      <!-- Autres articles ici -->
+      <p>Aucun document pour l'instant.</p>
     </section>
   </main>
 
