--- a/articles.html
+++ b/articles.html
@@ -28,10 +28,7 @@
 
   <main class="container">
     <section class="articles-grid">
-      <article class="card">
-        <h2><a href="blog/premier-article.html">Démineur Démoniaque</a></h2>
-        <p>Découvrez mon jeu le Démineur Démoniaque.</p>
-      </article>
+      <!-- Les articles seront chargés dynamiquement ici -->
     </section>
   </main>
 
@@ -40,5 +37,6 @@
       <p>&copy; 2025 FFlorian. Tous droits réservés.</p>
     </div>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
