--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
   <main class="container">
     <section class="articles-grid">
-      <article class="card">
-        <h2><a href="blog/premier-article.html">Démineur Démoniaque</a></h2>
+      <a href="blog/premier-article.html" class="card">
+        <h2>Démineur Démoniaque</h2>
         <p>Découvrez mon jeu le Démineur Démoniaque.</p>
-      </article>
+      </a>
       <!-- Autres articles ici -->
     </section>
   </main>
