--- a/docs.html
+++ b/docs.html
@@ -28,7 +28,7 @@
 
   <main class="container">
     <section class="articles-grid">
-      <p>Aucun document pour l'instant.</p>
+      <!-- Les docs seront chargés dynamiquement ici -->
     </section>
   </main>
 
@@ -37,5 +37,6 @@
       <p>&copy; 2025 FFlorian. Tous droits réservés.</p>
     </div>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
