retour en arriere

--- a/articles.html
+++ b/articles.html
@@ -28,7 +28,13 @@
 
   <main class="container">
     <section class="articles-grid">
-      <!-- Les articles seront chargés dynamiquement ici -->
+      <article class="card">
+        <a href="blog/premier-article.html" class="full-link">
+          <h2>Démineur Démoniaque</h2>
+          <p>Découvrez mon jeu le Démineur Démoniaque.</p>
+        </a>
+      </article>
+      <!-- Autres articles ici -->
     </section>
   </main>
 
@@ -37,6 +43,6 @@
       <p>&copy; 2025 FFlorian. Tous droits réservés.</p>
     </div>
   </footer>
-  <script src="script.js"></script>
+  <!-- script.js removed: static content -->
 </body>
 </html>
