--- a/docs.html
+++ b/docs.html
@@ -28,7 +28,7 @@
 
   <main class="container">
     <section class="articles-grid">
-      <!-- Les docs seront chargés dynamiquement ici -->
+      <p>Aucun document pour l'instant.</p>
     </section>
   </main>
 
@@ -37,6 +37,6 @@
       <p>&copy; 2025 FFlorian. Tous droits réservés.</p>
     </div>
   </footer>
-  <script src="script.js"></script>
+  <!-- script.js removed: static content -->
 </body>
 </html>
