--- a/docs.html
+++ b/docs.html
@@ -28,7 +28,13 @@
 
   <main class="container">
     <section class="articles-grid">
-      <p>Aucun document pour l'instant.</p>
+      <article class="card">
+        <a href="docs/streaming.html" class="full-link">
+          <h2>Guide sur le Streaming</h2>
+          <p>Les sites de streaming, leurs liens et comment changer ses DNS.</p>
+        </a>
+      </article>
+      <!-- Ajoutez d'autres documents ici -->
     </section>
   </main>
 
