--- a/index.html
+++ b/index.html
@@ -28,11 +28,19 @@
 
   <main class="container">
     <section class="articles-grid">
-      <a href="blog/premier-article.html" class="card">
-        <h2>Démineur Démoniaque</h2>
-        <p>Découvrez mon jeu le Démineur Démoniaque.</p>
-      </a>
-      <!-- Autres articles ici -->
+      <article class="card">
+        <a href="blog/premier-article.html" class="full-link">
+          <h2>Démineur Démoniaque</h2>
+          <p>Découvrez mon jeu le Démineur Démoniaque.</p>
+        </a>
+      </article>
+      <article class="card">
+        <a href="docs/streaming.html" class="full-link">
+          <h2>Guide sur le Streaming</h2>
+          <p>Les sites de streaming, leurs liens et comment changer ses DNS.</p>
+        </a>
+      </article>
+      <!-- Ajoutez d'autres articles ici -->
     </section>
   </main>
 
