--- a/index.html
+++ b/index.html
@@ -8,122 +8,107 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
-  <style>
-    :root {
-      --bg: #0a0a0a;
-      --bg-card: #1a1a1a;
-      --accent: #ff304f;
-      --text: #f2f2f2;
-      --text-muted: #b3b3b3;
-      --border: #333;
-      --radius: .6rem;
-      --max-width: 820px;
-    }
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
-    }
-    .container {
-      width: 90%;
-      max-width: var(--max-width);
-      margin: auto;
-    }
+ var(--text);
+    line-height: 1.6;
+  }
+  .container {
+    width: 90%;
+    max-width: var(--max-width);
+    margin: auto;
+  }
 
-    /* ---------- Header ---------- */
-    .header {
-      border-bottom: 1px solid var(--border);
-      padding: 1rem 0;
-    }
+  /* ---------- Header ---------- */
+  .header {
+    border-bottom: 1px solid var(--border);
+    padding: 1rem 0;
+  }
+  .nav-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .logo {
+    font-weight: 600;
+    font-size: 1.25rem;
+    color: var(--accent);
+  }
+  nav a {
+    margin-left: 1.5rem;
+    text-decoration: none;
+    color: var(--text-muted);
+    transition: color .2s;
+  }
+  nav a:hover { color: var(--accent); }
+
+  /* ---------- Hero ---------- */
+  .hero {
+    text-align: center;
+    padding: 4rem 0;
+  }
+  .hero h1 {
+    font-size: 2.5rem;
+    margin: 0 0 .5rem;
+    color: var(--accent);
+  }
+  .hero p {
+    font-size: 1.1rem;
+    color: var(--text-muted);
+  }
+
+  /* ---------- Grille d’articles ---------- */
+  .articles-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 1.5rem;
+    margin: 3rem 0;
+  }
+  .card {
+    background: var(--bg-card);
+    border: 1px solid var(--border);
+    border-radius: var(--radius);
+    padding: 1.8rem 1.5rem;
+    transition: transform .15s, box-shadow .15s;
+    position: relative;
+    /* hauteur auto, pas de limite */
+  }
+  .card:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 8px 20px rgba(255, 48, 79, .35);
+  }
+  .card h2 {
+    margin: 0 0 .8rem;
+    font-size: 1.25rem;
+    color: var(--accent);
+  }
+  .card p {
+    margin: 0;
+    color: var(--text-muted);
+  }
+  .full-link {
+    position: absolute;
+    inset: 0;
+    text-decoration: none;
+    color: inherit;
+  }
+
+  /* ---------- Footer ---------- */
+  .footer {
+    font-size: .85rem;
+    text-align: center;
+    padding: 2rem 0;
+    color: var(--text-muted);
+    border-top: 1px solid var(--border);
+  }
+
+  /* Responsive */
+  @media (max-width: 600px) {
     .nav-container {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+      flex-direction: column;
+      gap: .5rem;
     }
-    .logo {
-      font-weight: 600;
-      font-size: 1.25rem;
-      color: var(--accent);
-    }
-    nav a {
-      margin-left: 1.5rem;
-      text-decoration: none;
-      color: var(--text-muted);
-      transition: color .2s;
-    }
-    nav a:hover { color: var(--accent); }
-
-    /* ---------- Hero ---------- */
-    .hero {
-      text-align: center;
-      padding: 4rem 0;
-    }
-    .hero h1 {
-      font-size: 2.5rem;
-      margin: 0 0 .5rem;
-      color: var(--accent);
-    }
-    .hero p {
-      font-size: 1.1rem;
-      color: var(--text-muted);
-    }
-
-    /* ---------- Grille d’articles ---------- */
-    .articles-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      margin: 3rem 0;
-    }
-    .card {
-      background: var(--bg-card);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      padding: 1.5rem;
-      transition: transform .15s, box-shadow .15s;
-      position: relative;
-    }
-    .card:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 6px 16px rgba(255, 48, 79, .35);
-    }
-    .card h2 {
-      margin: 0 0 .5rem;
-      font-size: 1.2rem;
-      color: var(--accent);
-    }
-    .card p {
-      margin: 0;
-      color: var(--text-muted);
-    }
-    .full-link {
-      position: absolute;
-      inset: 0;
-      text-decoration: none;
-      color: inherit;
-    }
-
-    /* ---------- Footer ---------- */
-    .footer {
-      font-size: .85rem;
-      text-align: center;
-      padding: 2rem 0;
-      color: var(--text-muted);
-      border-top: 1px solid var(--border);
-    }
-
-    /* Responsive */
-    @media (max-width: 600px) {
-      .nav-container {
-        flex-direction: column;
-        gap: .5rem;
-      }
-      nav a { margin: 0 .7rem; }
-    }
-  </style>
+    nav a { margin: 0 .7rem; }
+  }
+</style>
 </head>
 
 <body>
