--- a/articles.html
+++ b/articles.html
@@ -1,15 +1,146 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Articles - FFlorian</title>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Articles – FFlorian</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <style>
+    :root {
+      --bg: #0a0a0a;
+      --bg-card: #1a1a1a;
+      --accent: #ff304f;
+      --text: #f2f2f2;
+      --text-muted: #b3b3b3;
+      --border: #333;
+      --radius: .6rem;
+      --max-width: 800px;
+    }
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+    }
+    .container {
+      width: 90%;
+      max-width: var(--max-width);
+      margin: auto;
+    }
+
+    /* Header */
+    header {
+      border-bottom: 1px solid var(--border);
+      padding: 1rem 0;
+    }
+    .nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .logo {
+      font-weight: 600;
+      font-size: 1.25rem;
+      color: var(--accent);
+    }
+    nav a {
+      margin-left: 1.5rem;
+      text-decoration: none;
+      color: var(--text-muted);
+      transition: color .2s;
+    }
+    nav a:hover { color: var(--accent); }
+
+    /* Hero */
+    .hero {
+      text-align: center;
+      padding: 4rem 0 2.5rem;
+    }
+    .hero h1 {
+      font-size: 2.5rem;
+      margin: 0 0 .5rem;
+      color: var(--accent);
+    }
+    .hero p {
+      font-size: 1.1rem;
+      color: var(--text-muted);
+    }
+
+    /* Section titre */
+    .section-title {
+      font-size: 1.4rem;
+      margin: 2.5rem 0 1.2rem;
+      color: var(--accent);
+      border-bottom: 1px solid var(--border);
+      padding-bottom: .4rem;
+    }
+
+    /* Liste d’articles */
+    .article-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .article-list li {
+      background: var(--bg-card);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      margin-bottom: 1rem;
+      transition: transform .15s, box-shadow .15s;
+    }
+    .article-list li:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(255, 48, 79, .35);
+    }
+    .article-list a {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 1.2rem 1.4rem;
+      text-decoration: none;
+      color: var(--text);
+    }
+    .article-list .meta {
+      font-size: .9rem;
+      color: var(--text-muted);
+    }
+    .article-list .tag {
+      font-size: .75rem;
+      background: var(--accent);
+      color: #fff;
+      padding: .25rem .6rem;
+      border-radius: 999px;
+      margin-left: .6rem;
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      font-size: .85rem;
+      color: var(--text-muted);
+      border-top: 1px solid var(--border);
+      padding: 2rem 0;
+      margin-top: 3rem;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      .nav { flex-direction: column; gap: .5rem; }
+      nav a { margin: 0 .7rem; }
+      .article-list a { flex-direction: column; align-items: flex-start; }
+      .article-list .tag { margin: .4rem 0 0 0; }
+    }
+  </style>
 </head>
+
 <body>
-  <header class="header">
-    <div class="container nav-container">
+  <header>
+    <div class="container nav">
       <div class="logo">FFlorian</div>
       <nav>
         <a href="index.html">Accueil</a>
@@ -22,27 +153,27 @@
   <section class="hero">
     <div class="container">
       <h1>Articles</h1>
-      <p>Liste des articles disponibles.</p>
+      <p>Retrouvez tous les articles du blog.</p>
     </div>
   </section>
 
   <main class="container">
-    <section class="articles-grid">
-      <article class="card">
-        <a href="blog/premier-article.html" class="full-link">
-          <h2>Démineur Démoniaque</h2>
-          <p>Découvrez mon jeu le Démineur Démoniaque.</p>
+    <h2 class="section-title">Derniers articles</h2>
+    <ul class="article-list">
+      <li>
+        <a href="blog/premier-article.html">
+          <span class="meta">Démineur Démoniaque</span>
+          <span class="tag">Jeu</span>
         </a>
-      </article>
-      <!-- Autres articles ici -->
-    </section>
+      </li>
+      <!-- Ajoutez d'autres articles ici -->
+    </ul>
   </main>
 
-  <footer class="footer">
+  <footer>
     <div class="container">
       <p>&copy; 2025 FFlorian. Tous droits réservés.</p>
     </div>
   </footer>
-  <!-- script.js removed: static content -->
 </body>
 </html>
