correction + pre ajout dns

--- a/docs.html
+++ b/docs.html
@@ -177,10 +177,9 @@
     <div class="container nav">
       <div class="logo">FFlorian</div>
       <nav>
-        <a href="index.html">Accueil</a>
-        <a href="articles.html">Articles</a>
-        <a href="blog/premier-article.html">Blog</a>
-        <a href="docs.html">Documentation</a>
+        <a href="./index.html">Accueil</a>
+        <a href="./blog.html">Blog</a>
+        <a href="./docs.html">Documentation</a>
       </nav>
       <span id="theme-toggle">🌙</span>
     </div>
