--- a/blog.html
+++ b/blog.html
@@ -178,8 +178,8 @@
       <div class="logo">FFlorian</div>
       <nav>
         <a href="index.html">Accueil</a>
-        <a href="articles.html">Articles</a>
-        <a href="blog/premier-article.html">Blog</a>
+        <a href="blog.html">Blog</a>
+        <a href="docs.html">Documentation</a>
       </nav>
       <span id="theme-toggle">🌙</span>
     </div>
