--- a/index.html
+++ b/index.html
@@ -182,9 +182,8 @@
     <div class="container nav">
       <div class="logo">FFlorian</div>
       <nav>
-        <a href="articles.html">Articles</a>
-        <a href="docs.html">Documentation</a>
-        <a href="blog/premier-article.html">Blog</a>
+        <a href="./docs.html">Documentation</a>
+        <a href="./blog.html">Blog</a>
       </nav>
       <span id="theme-toggle">🌙</span>
     </div>
