ajout guide dns

--- a/docs.html
+++ b/docs.html
@@ -198,10 +198,15 @@
       <li>
         <a href="docs/streaming.html">
           <span class="meta">Guide sur le Streaming</span>
+          <span class="tag">Ressources</span>
+        </a>
+      </li>
+      <li>
+        <a href="docs/dns.html">
+          <span class="meta">Guide sur les DNS</span>
           <span class="tag">Tuto</span>
         </a>
       </li>
-      <!-- Ajoutez d'autres guides ici -->
     </ul>
   </main>
 
