--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <li>
         <a href="docs/streaming.html">
           <span class="meta">Guide sur le Streaming</span>
-          <span class="tag">Tuto</span>
+          <span class="tag">Ressources</span>
         </a>
       </li>
       <!-- Ajoute d'autres docs ici -->
