--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <ul class="item-list">
       <li>
         <a href="articles/dns.html">
-          <span class="meta">Guide les DNS</span>
+          <span class="meta">Configurer les DNS</span>
           <span class="tag">Tuto</span>
         </a>
       </li>
