--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </li>
       <li>
         <a href="articles/streaming.html">
-          <span class="meta">Guide sur le streaming</span>
+          <span class="meta">Guide Streaming</span>
           <span class="tag">Docs</span>
         </a>
       </li>
