--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             <h3><a href="articles/streaming.html">Guide Streaming</a></h3>
             <p>Découvrez les meilleures méthodes pour regarder vos films et séries</p>
             <div class="article-meta">
-              <span class="date">Dernière mise à jour : 15 mai 2025</span>
+              <span class="date">Dernière mise à jour : 19 juillet 2025</span>
               <span class="tag">Streaming</span>
             </div>
           </div>
