--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         <article class="article-card">
           <div class="card-content">
             <h3><a href="articles/streaming.html">Guide Streaming</a></h3>
-            <p>Découvrez les meilleures méthodes pour regarder vos films et séries</p>
+            <p>Découvrez les meilleures sites pour regarder vos films et séries</p>
             <div class="article-meta">
               <span class="date">22 avril 2025</span>
               <span class="tag">Streaming</span>
