--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
           <div class="featured-content">
             <span class="featured-tag">Mis en avant</span>
             <h3><a href="articles/streaming.html">Guide Streaming</a></h3>
-            <p>Découvrez les meilleures méthodes pour regarder vos films et séries</p>
+            <p>Découvrez les meilleures sites pour regarder vos films et séries</p>
             <div class="article-meta">
               <span class="date">Dernière mise à jour : 19 juillet 2025</span>
               <span class="tag">Streaming</span>
