--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Développeur web passionné et créateur de contenu. Retrouvez ici mes articles sur le développement, la tech et mes projets.">
   <title>fflorian.fr</title>
   <link rel="stylesheet" href="style.css">
 </head>
