--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Développeur web passionné et créateur de contenu. Retrouvez ici mes articles sur le développement, la tech et mes projets.">
-  <title>fflorian.fr</title>
+  <title>FFlorian</title>
+  <link rel="icon" type="image/png" href="logo.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <div class="header-container">
-      <h1><a href="index.html">fflorian.fr</a></h1>
+      <h1><a href="index.html">FFlorian</a></h1>
+      <form action="articles.html" method="get" class="search-form">
+        <input type="search" name="q" placeholder="Rechercher des articles..." aria-label="Rechercher des articles">
+        <button type="submit" aria-label="Rechercher">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+          </svg>
+        </button>
+      </form>
       <a href="https://twitter.com/fflorianfcm" target="_blank" rel="noopener noreferrer" class="twitter-button">Twitter</a>
     </div>
   </header>
