--- a/articles.html
+++ b/articles.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Tous les articles de FFlorian - Développeur web et créateur de contenu. Retrouvez ici tous mes articles sur le développement, la tech et mes projets.">
+  <meta name="description" content="Tous les articles de FFlorian">
   <title>Tous les articles - FFlorian</title>
   <link rel="icon" type="image/png" href="logo.png">
   <link rel="stylesheet" href="style.css">
