--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 FFlorian. Tous droits réservés.</p>
+    <div class="footer-content">
+      <div class="footer-left">
+        <p>Ce site est open source : <a href="https://github.com/FFloorian/fflorian" style="color: var(--accent-red);">Voir sur GitHub</a>. Il ne collecte aucune donnée personnelle. Toutefois, l'hébergeur (Netlify) peut enregistrer certaines informations techniques (comme l'adresse IP) à des fins de journalisation et de sécurité. Ce site ne contient aucune publicité.</p>
+      </div>
+      <div class="footer-right">
+        <p>&copy; 2025 FFlorian. Tous droits réservés.</p>
+      </div>
+    </div>
   </footer>
 
   <script src="script.js"></script>
